--- a/spring-task3/pom.xml
+++ b/spring-task3/pom.xml
@@ -11,6 +11,7 @@
 
 	<properties>
 		<spring.boot.version>2.1.3.RELEASE</spring.boot.version>
+		<junit.version>5.4.0</junit.version>
 	</properties>
 
 	<dependencies>
@@ -25,6 +26,24 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>${spring.boot.version}</version>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
